syntax = "proto3";
package proto;
option go_package = "./pb";

message AddrInfoStatus { bool isAdded = 1; }

message AddrInfo { string addr = 1; }

service BootstrapService {
  rpc addReplica(AddrInfo) returns (AddrInfoStatus) {}
}